Added documentation to model and prediction blocks

--- a/Eindopdracht/src/main.ipynb
+++ b/Eindopdracht/src/main.ipynb
@@ -243,49 +243,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/10\n",
-      "2046/2046 [==============================] - 79s 39ms/step - loss: 1.4910 - accuracy: 0.5570 - val_loss: 0.7621 - val_accuracy: 0.7596\n",
-      "Epoch 2/10\n",
-      "2046/2046 [==============================] - 82s 40ms/step - loss: 0.5441 - accuracy: 0.8252 - val_loss: 0.4216 - val_accuracy: 0.8676\n",
-      "Epoch 3/10\n",
-      "2046/2046 [==============================] - 79s 38ms/step - loss: 0.3363 - accuracy: 0.8901 - val_loss: 0.2620 - val_accuracy: 0.9161\n",
-      "Epoch 4/10\n",
-      "2046/2046 [==============================] - 83s 41ms/step - loss: 0.2402 - accuracy: 0.9206 - val_loss: 0.2244 - val_accuracy: 0.9293\n",
-      "Epoch 5/10\n",
-      "2046/2046 [==============================] - 79s 39ms/step - loss: 0.1875 - accuracy: 0.9375 - val_loss: 0.1757 - val_accuracy: 0.9419\n",
-      "Epoch 6/10\n",
-      "2046/2046 [==============================] - 76s 37ms/step - loss: 0.1487 - accuracy: 0.9508 - val_loss: 0.1489 - val_accuracy: 0.9516\n",
-      "Epoch 7/10\n",
-      "2046/2046 [==============================] - 78s 38ms/step - loss: 0.1274 - accuracy: 0.9582 - val_loss: 0.1201 - val_accuracy: 0.9628\n",
-      "Epoch 8/10\n",
-      "2046/2046 [==============================] - 79s 39ms/step - loss: 0.1063 - accuracy: 0.9650 - val_loss: 0.1006 - val_accuracy: 0.9654\n",
-      "Epoch 9/10\n",
-      "2046/2046 [==============================] - 78s 38ms/step - loss: 0.0958 - accuracy: 0.9686 - val_loss: 0.1325 - val_accuracy: 0.9576\n",
-      "Epoch 10/10\n",
-      "2046/2046 [==============================] - 79s 38ms/step - loss: 0.0837 - accuracy: 0.9732 - val_loss: 0.0970 - val_accuracy: 0.9686\n",
-      "313/313 - 3s - loss: 0.1071 - accuracy: 0.9682 - 3s/epoch - 9ms/step\n",
-      "0.9682000279426575\n"
+      "Epoch 1/20\n",
+      "2046/2046 [==============================] - 91s 44ms/step - loss: 1.1038 - accuracy: 0.6759 - val_loss: 0.4500 - val_accuracy: 0.8622\n",
+      "Epoch 2/20\n",
+      "2046/2046 [==============================] - 91s 45ms/step - loss: 0.3050 - accuracy: 0.9083 - val_loss: 0.2574 - val_accuracy: 0.9219\n",
+      "Epoch 3/20\n",
+      "2046/2046 [==============================] - 93s 45ms/step - loss: 0.1727 - accuracy: 0.9489 - val_loss: 0.1813 - val_accuracy: 0.9454\n",
+      "Epoch 4/20\n",
+      "2046/2046 [==============================] - 100s 49ms/step - loss: 0.1163 - accuracy: 0.9663 - val_loss: 0.1551 - val_accuracy: 0.9513\n",
+      "Epoch 5/20\n",
+      "2046/2046 [==============================] - 90s 44ms/step - loss: 0.0867 - accuracy: 0.9749 - val_loss: 0.1004 - val_accuracy: 0.9706\n",
+      "Epoch 6/20\n",
+      "2046/2046 [==============================] - 89s 43ms/step - loss: 0.0709 - accuracy: 0.9803 - val_loss: 0.0868 - val_accuracy: 0.9752\n",
+      "Epoch 7/20\n",
+      "2046/2046 [==============================] - 91s 44ms/step - loss: 0.0545 - accuracy: 0.9849 - val_loss: 0.0423 - val_accuracy: 0.9882\n",
+      "Epoch 8/20\n",
+      "2046/2046 [==============================] - 89s 43ms/step - loss: 0.0459 - accuracy: 0.9872 - val_loss: 0.0352 - val_accuracy: 0.9900\n",
+      "Epoch 9/20\n",
+      "2046/2046 [==============================] - 89s 44ms/step - loss: 0.0402 - accuracy: 0.9889 - val_loss: 0.0266 - val_accuracy: 0.9928\n",
+      "Epoch 10/20\n",
+      "2046/2046 [==============================] - 90s 44ms/step - loss: 0.0384 - accuracy: 0.9889 - val_loss: 0.0296 - val_accuracy: 0.9908\n",
+      "Epoch 11/20\n",
+      "2046/2046 [==============================] - 88s 43ms/step - loss: 0.0310 - accuracy: 0.9915 - val_loss: 0.0440 - val_accuracy: 0.9854\n",
+      "Epoch 12/20\n",
+      "2046/2046 [==============================] - 89s 43ms/step - loss: 0.0299 - accuracy: 0.9920 - val_loss: 0.0513 - val_accuracy: 0.9872\n",
+      "Epoch 13/20\n",
+      "2046/2046 [==============================] - 91s 44ms/step - loss: 0.0255 - accuracy: 0.9934 - val_loss: 0.1039 - val_accuracy: 0.9776\n",
+      "Epoch 14/20\n",
+      "2046/2046 [==============================] - 89s 43ms/step - loss: 0.0208 - accuracy: 0.9946 - val_loss: 0.0475 - val_accuracy: 0.9872\n",
+      "Epoch 15/20\n",
+      "2046/2046 [==============================] - 89s 44ms/step - loss: 0.0219 - accuracy: 0.9944 - val_loss: 0.0357 - val_accuracy: 0.9899\n",
+      "Epoch 16/20\n",
+      "2046/2046 [==============================] - 90s 44ms/step - loss: 0.0236 - accuracy: 0.9941 - val_loss: 0.0460 - val_accuracy: 0.9873\n",
+      "Epoch 17/20\n",
+      "2046/2046 [==============================] - 89s 44ms/step - loss: 0.0154 - accuracy: 0.9959 - val_loss: 0.0454 - val_accuracy: 0.9890\n",
+      "Epoch 18/20\n",
+      "2046/2046 [==============================] - 88s 43ms/step - loss: 0.0166 - accuracy: 0.9952 - val_loss: 0.0515 - val_accuracy: 0.9858\n",
+      "Epoch 19/20\n",
+      "2046/2046 [==============================] - 89s 43ms/step - loss: 0.0174 - accuracy: 0.9955 - val_loss: 0.0199 - val_accuracy: 0.9948\n",
+      "Epoch 20/20\n",
+      "2046/2046 [==============================] - 90s 44ms/step - loss: 0.0180 - accuracy: 0.9953 - val_loss: 0.0355 - val_accuracy: 0.9916\n",
+      "313/313 - 3s - loss: 0.0326 - accuracy: 0.9925 - 3s/epoch - 11ms/step\n",
+      "0.9925000071525574\n"
      ]
     }
    ],
    "source": [
-    "num_filters = 20\n",
+    "#setting the model variables\n",
+    "num_filters = 30\n",
     "filter_size = 3\n",
     "pool_size = 2\n",
-    "num_epochs = 10\n",
+    "num_epochs = 20\n",
     "\n",
+    "#creating the model and adding the layers\n",
     "model = Sequential([\n",
-    "    Conv2D(num_filters, filter_size, activation='relu', input_shape=train_images[0].shape),\n",
-    "    MaxPooling2D(pool_size=pool_size),\n",
-    "\n",
-    "    Conv2D(num_filters, filter_size, activation='relu'),\n",
+    "    Conv2D(num_filters, filter_size, input_shape=train_images[0].shape),\n",
     "    MaxPooling2D(pool_size=pool_size),\n",
     "\n",
     "    Conv2D(num_filters, filter_size, activation='relu'),\n",
@@ -297,8 +316,10 @@
     "\n",
     "model.compile('adam', loss='categorical_crossentropy', metrics=['accuracy'])\n",
     "\n",
+    "#training the model\n",
     "model.fit(train_images, to_categorical(train_labels), epochs=num_epochs, validation_split=0.15)\n",
     "\n",
+    "#testing the model\n",
     "test_loss, test_acc = model.evaluate(test_images,  to_categorical(test_labels), verbose=2)\n",
     "print(test_acc)"
    ]
@@ -313,80 +334,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 0s 72ms/step\n",
+      "1/1 [==============================] - 0s 57ms/step\n",
       "A\n",
-      "1/1 [==============================] - 0s 21ms/step\n",
+      "1/1 [==============================] - 0s 25ms/step\n",
       "B\n",
-      "1/1 [==============================] - 0s 64ms/step\n",
+      "1/1 [==============================] - 0s 26ms/step\n",
       "C\n",
-      "1/1 [==============================] - 0s 31ms/step\n",
-      "D\n",
       "1/1 [==============================] - 0s 20ms/step\n",
+      "D\n",
+      "1/1 [==============================] - 0s 50ms/step\n",
       "E\n",
-      "1/1 [==============================] - 0s 24ms/step\n",
-      "F\n",
-      "1/1 [==============================] - 0s 24ms/step\n",
-      "G\n",
-      "1/1 [==============================] - 0s 26ms/step\n",
-      "H\n",
-      "1/1 [==============================] - 0s 33ms/step\n",
-      "I\n",
-      "1/1 [==============================] - 0s 38ms/step\n",
-      "J\n",
-      "1/1 [==============================] - 0s 37ms/step\n",
-      "K\n",
-      "1/1 [==============================] - 0s 28ms/step\n",
-      "L\n",
-      "1/1 [==============================] - 0s 28ms/step\n",
-      "M\n",
-      "1/1 [==============================] - 0s 24ms/step\n",
-      "N\n",
-      "1/1 [==============================] - 0s 27ms/step\n",
-      "O\n",
-      "1/1 [==============================] - 0s 27ms/step\n",
-      "P\n",
-      "1/1 [==============================] - 0s 40ms/step\n",
-      "C\n",
-      "1/1 [==============================] - 0s 27ms/step\n",
-      "R\n",
-      "1/1 [==============================] - 0s 32ms/step\n",
-      "S\n",
-      "1/1 [==============================] - 0s 28ms/step\n",
-      "T\n",
       "1/1 [==============================] - 0s 30ms/step\n",
-      "U\n",
+      "F\n",
+      "1/1 [==============================] - 0s 84ms/step\n",
+      "G\n",
+      "1/1 [==============================] - 0s 32ms/step\n",
+      "G\n",
       "1/1 [==============================] - 0s 28ms/step\n",
-      "V\n",
-      "1/1 [==============================] - 0s 26ms/step\n",
+      "I\n",
+      "1/1 [==============================] - 0s 25ms/step\n",
+      "H\n",
+      "1/1 [==============================] - 0s 25ms/step\n",
       "K\n",
-      "1/1 [==============================] - 0s 29ms/step\n",
+      "1/1 [==============================] - 0s 36ms/step\n",
+      "L\n",
+      "1/1 [==============================] - 0s 37ms/step\n",
+      "M\n",
+      "1/1 [==============================] - 0s 41ms/step\n",
+      "N\n",
+      "1/1 [==============================] - 0s 23ms/step\n",
+      "O\n",
+      "1/1 [==============================] - 0s 20ms/step\n",
+      "P\n",
+      "1/1 [==============================] - 0s 21ms/step\n",
+      "Q\n",
+      "1/1 [==============================] - 0s 22ms/step\n",
+      "R\n",
+      "1/1 [==============================] - 0s 21ms/step\n",
+      "S\n",
+      "1/1 [==============================] - 0s 21ms/step\n",
+      "T\n",
+      "1/1 [==============================] - 0s 28ms/step\n",
+      "U\n",
+      "1/1 [==============================] - 0s 27ms/step\n",
+      "V\n",
+      "1/1 [==============================] - 0s 28ms/step\n",
+      "W\n",
+      "1/1 [==============================] - 0s 38ms/step\n",
       "X\n",
       "1/1 [==============================] - 0s 29ms/step\n",
       "Y\n",
-      "1/1 [==============================] - 0s 32ms/step\n",
+      "1/1 [==============================] - 0s 30ms/step\n",
       "Z\n"
      ]
     }
    ],
    "source": [
-    "predict_letters = ['A', 'B', 'C', 'D', 'E', 'F', 'G', 'H', 'I', 'J', 'K', 'L', 'M', 'N', 'O', 'P', 'Q', 'R', 'S', 'T', 'U', 'V', 'W', 'X', 'Y', 'Z']\n",
+    "predict_letters = ['A', 'B', 'C', 'D', 'E', 'F', 'G', 'H', 'I', 'J', 'K', 'L', 'M', 'N', 'O', 'P', 'Q', 'R', 'S', 'T', 'U', 'V', 'W', 'X', 'Y', 'Z', 'del', 'nothing', 'space']\n",
     "\n",
-    "for letter in predict_letters:\n",
-    "    # print(letter)\n",
-    "    path = \"C:/Users/emmar/Documents/GitHub/VISN/Eindopdracht/dataset/asl_alphabet_test/asl_alphabet_test/\"+letter+\"_test.jpg\"\n",
+    "#for each letter\n",
+    "for i in range(len(predict_letters) - 3):\n",
+    "    #open the test image version of the letter\n",
+    "    path = \"C:/Users/emmar/Documents/GitHub/VISN/Eindopdracht/dataset/asl_alphabet_test/asl_alphabet_test/\"+predict_letters[i]+\"_test.jpg\"\n",
     "    image_to_predict = cv2.imread(path, cv2.IMREAD_GRAYSCALE)\n",
+    "\n",
+    "    #preprocess the image the same as images used for training\n",
     "    compressed_image_to_predict = cv2.resize(image_to_predict, (image_size, image_size))\n",
     "    reshaped_image_to_predict = compressed_image_to_predict.reshape(-1, image_size, image_size, 1)\n",
     "    normalized_image_to_predict = (reshaped_image_to_predict / 255) - 0.5\n",
     "\n",
+    "    #predict the letter\n",
     "    prediction = model.predict(normalized_image_to_predict)\n",
+    "\n",
+    "    #print the actual letter instead of percentages\n",
     "    predicted_letter = list(prediction[0]).index(max(prediction[0]))\n",
     "    # print(prediction)\n",
     "    print(predict_letters[predicted_letter])"
