--- a/Eindopdracht/src/main.ipynb
+++ b/Eindopdracht/src/main.ipynb
@@ -334,75 +334,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 0s 57ms/step\n",
+      "1/1 [==============================] - 0s 38ms/step\n",
       "A\n",
-      "1/1 [==============================] - 0s 25ms/step\n",
+      "1/1 [==============================] - 0s 34ms/step\n",
       "B\n",
-      "1/1 [==============================] - 0s 26ms/step\n",
+      "1/1 [==============================] - 0s 23ms/step\n",
       "C\n",
-      "1/1 [==============================] - 0s 20ms/step\n",
+      "1/1 [==============================] - 0s 27ms/step\n",
       "D\n",
-      "1/1 [==============================] - 0s 50ms/step\n",
+      "1/1 [==============================] - 0s 26ms/step\n",
       "E\n",
-      "1/1 [==============================] - 0s 30ms/step\n",
+      "1/1 [==============================] - 0s 26ms/step\n",
       "F\n",
-      "1/1 [==============================] - 0s 84ms/step\n",
+      "1/1 [==============================] - 0s 29ms/step\n",
       "G\n",
-      "1/1 [==============================] - 0s 32ms/step\n",
+      "1/1 [==============================] - 0s 30ms/step\n",
       "G\n",
-      "1/1 [==============================] - 0s 28ms/step\n",
+      "1/1 [==============================] - 0s 30ms/step\n",
       "I\n",
       "1/1 [==============================] - 0s 25ms/step\n",
       "H\n",
-      "1/1 [==============================] - 0s 25ms/step\n",
+      "1/1 [==============================] - 0s 31ms/step\n",
       "K\n",
-      "1/1 [==============================] - 0s 36ms/step\n",
+      "1/1 [==============================] - 0s 40ms/step\n",
       "L\n",
-      "1/1 [==============================] - 0s 37ms/step\n",
-      "M\n",
-      "1/1 [==============================] - 0s 41ms/step\n",
-      "N\n",
-      "1/1 [==============================] - 0s 23ms/step\n",
-      "O\n",
-      "1/1 [==============================] - 0s 20ms/step\n",
-      "P\n",
-      "1/1 [==============================] - 0s 21ms/step\n",
-      "Q\n",
       "1/1 [==============================] - 0s 22ms/step\n",
-      "R\n",
-      "1/1 [==============================] - 0s 21ms/step\n",
-      "S\n",
-      "1/1 [==============================] - 0s 21ms/step\n",
-      "T\n",
-      "1/1 [==============================] - 0s 28ms/step\n",
-      "U\n",
-      "1/1 [==============================] - 0s 27ms/step\n",
-      "V\n",
-      "1/1 [==============================] - 0s 28ms/step\n",
-      "W\n",
-      "1/1 [==============================] - 0s 38ms/step\n",
-      "X\n",
+      "M\n",
+      "1/1 [==============================] - 0s 26ms/step\n",
+      "N\n",
       "1/1 [==============================] - 0s 29ms/step\n",
+      "O\n",
+      "1/1 [==============================] - 0s 27ms/step\n",
+      "P\n",
+      "1/1 [==============================] - 0s 27ms/step\n",
+      "Q\n",
+      "1/1 [==============================] - 0s 24ms/step\n",
+      "R\n",
+      "1/1 [==============================] - 0s 28ms/step\n",
+      "S\n",
+      "1/1 [==============================] - 0s 28ms/step\n",
+      "T\n",
+      "1/1 [==============================] - 0s 24ms/step\n",
+      "U\n",
+      "1/1 [==============================] - 0s 24ms/step\n",
+      "V\n",
+      "1/1 [==============================] - 0s 44ms/step\n",
+      "W\n",
+      "1/1 [==============================] - 0s 29ms/step\n",
+      "X\n",
+      "1/1 [==============================] - 0s 28ms/step\n",
       "Y\n",
-      "1/1 [==============================] - 0s 30ms/step\n",
+      "1/1 [==============================] - 0s 35ms/step\n",
       "Z\n"
      ]
     }
    ],
    "source": [
-    "predict_letters = ['A', 'B', 'C', 'D', 'E', 'F', 'G', 'H', 'I', 'J', 'K', 'L', 'M', 'N', 'O', 'P', 'Q', 'R', 'S', 'T', 'U', 'V', 'W', 'X', 'Y', 'Z', 'del', 'nothing', 'space']\n",
-    "\n",
     "#for each letter\n",
-    "for i in range(len(predict_letters) - 3):\n",
+    "for i in range(len(letters) - 3):\n",
     "    #open the test image version of the letter\n",
-    "    path = \"C:/Users/emmar/Documents/GitHub/VISN/Eindopdracht/dataset/asl_alphabet_test/asl_alphabet_test/\"+predict_letters[i]+\"_test.jpg\"\n",
+    "    path = \"C:/Users/emmar/Documents/GitHub/VISN/Eindopdracht/dataset/asl_alphabet_test/asl_alphabet_test/\"+letters[i]+\"_test.jpg\"\n",
     "    image_to_predict = cv2.imread(path, cv2.IMREAD_GRAYSCALE)\n",
     "\n",
     "    #preprocess the image the same as images used for training\n",
@@ -416,7 +414,7 @@
     "    #print the actual letter instead of percentages\n",
     "    predicted_letter = list(prediction[0]).index(max(prediction[0]))\n",
     "    # print(prediction)\n",
-    "    print(predict_letters[predicted_letter])"
+    "    print(letters[predicted_letter])"
    ]
   }
  ],
