--- a/Eindopdracht/src/main.ipynb
+++ b/Eindopdracht/src/main.ipynb
@@ -416,6 +416,45 @@
     "    # print(prediction)\n",
     "    print(letters[predicted_letter])"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Save the model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:absl:Found untraced functions such as _jit_compiled_convolution_op, _jit_compiled_convolution_op while saving (showing 2 of 2). These functions will not be directly callable after loading.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Assets written to: ASL_model\\assets\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Assets written to: ASL_model\\assets\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.save(\"ASL_model.keras\")"
+   ]
   }
  ],
  "metadata": {
