--- a/Eindopdracht/src/main.ipynb
+++ b/Eindopdracht/src/main.ipynb
@@ -958,7 +958,7 @@
    "source": [
     "#for each letter\n",
     "for i in range(len(letters) - 3):\n",
-    "    #open the test image version of the letter\n",
+    "    #open the test capture image version of the letter\n",
     "    path = \"C:/Users/emmar/Documents/GitHub/VISN/Eindopdracht/dataset/asl_alphabet_test/als_alphabet_test_captures/\"+letters[i]+\"_test.jpg\"\n",
     "    image_to_predict = cv2.imread(path, cv2.IMREAD_GRAYSCALE)\n",
     "\n",
