Added documentation to test image

--- a/Eindopdracht/src/main.ipynb
+++ b/Eindopdracht/src/main.ipynb
@@ -63,6 +63,7 @@
     }
    ],
    "source": [
+    "#load test image\n",
     "image = imread(\"C:/Users/emmar/Documents/GitHub/VISN/Opdracht_1/flower.jpg\")\n",
     "\n",
     "#grayscale\n",
